--- a/assets/style.css
+++ b/assets/style.css
@@ -90,7 +90,16 @@ body {
 	font-size: 14px;
 }
 #gallery {
-	/*	min-height: 100vh; */
+	min-height: 100vh;
+}
+.modal-body img {
+    max-width: 100%;
+    max-height: 100vh; /* Ne dépasse jamais la hauteur de l'écran */
+    width: 500px;
+    height: 700px;
+    object-fit: cover;
+    margin: auto;
+    display: block;
 }
 .title{
 	text-align: center;
